--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
 <body>
+    <div class ='logo-container'>
+        <img src="TemplateData/DRIP_Logo.svg" alt="logo" class="logo">
+    </div>
     <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
         <div id="unity-loading-bar">
