--- a/index.html
+++ b/index.html
@@ -31,22 +31,25 @@
         var fullscreenButton = document.querySelector("#unity-fullscreen-button");
         var warningBanner = document.querySelector("#unity-warning");
 
+        var unityInstance; // Declare unityInstance globally
+
         function getURLParameter(name) {
             return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [null, ''])[1].replace(/\+/g, '%20')) || null;
         }
 
         function requestFullscreen() {
-            var elem = document.getElementById('unity-container');
-            unityInstance2.SetFullscreen(1);
+           /* var elem = document.getElementById('unity-container');
             if (elem.requestFullscreen) {
-                elem.requestFullscreen();
+                elem.requestFullscreen(1);
             } else if (elem.mozRequestFullScreen) { // Firefox
-                elem.mozRequestFullScreen();
+                elem.mozRequestFullScreen(1);
             } else if (elem.webkitRequestFullscreen) { // Chrome, Safari, Opera
-                elem.webkitRequestFullscreen();
+                elem.webkitRequestFullscreen(1);
             } else if (elem.msRequestFullscreen) { // IE/Edge
-                elem.msRequestFullscreen();
-            }
+                elem.msRequestFullscreen(1);
+            }*/
+            unityInstance.SetFullscreen(1);
+
             screen.orientation.lock('landscape').catch(function (error) {
                 console.log("Error locking the orientation: ", error);
             });
@@ -123,15 +126,14 @@
         }
 
         loadingBar.style.display = "block";
-        var unityInstance2; // Declare unityInstance at a higher scope if not already declared.
 
         var script = document.createElement("script");
         script.src = loaderUrl;
         script.onload = () => {
             createUnityInstance(canvas, config, (progress) => {
                 progressBarFull.style.width = 100 * progress + "%";
-            }).then((unityInstance) => {
-                unityInstance2 = unityInstance;
+            }).then((instance) => {
+                unityInstance = instance; // Assign the instance to the global variable
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
                     unityInstance.SetFullscreen(1);
