--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div id="unity-warning"> </div>
         <div id="unity-footer">
             <div id="unity-webgl-logo"></div>
-            <div id="unity-fullscreen-button"></div>
+            <div id="unity-fullscreen-button">Enter Fullscreen</div>
+            <div id="unity-exit-fullscreen-button">Exit Fullscreen</div>
             <div id="unity-build-title">Drip Shoot Shot</div>
         </div>
     </div>
@@ -29,6 +30,7 @@
         var loadingBar = document.querySelector("#unity-loading-bar");
         var progressBarFull = document.querySelector("#unity-progress-bar-full");
         var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+        var exitFullscreenButton = document.querySelector("#unity-exit-fullscreen-button");
         var warningBanner = document.querySelector("#unity-warning");
 
         var unityInstance; // Declare unityInstance globally
@@ -38,25 +40,26 @@
         }
 
         function requestFullscreen() {
-           /* var elem = document.getElementById('unity-container');
+            var elem = document.getElementById('unity-container');
             if (elem.requestFullscreen) {
-                elem.requestFullscreen(1);
+                elem.requestFullscreen();
             } else if (elem.mozRequestFullScreen) { // Firefox
-                elem.mozRequestFullScreen(1);
+                elem.mozRequestFullScreen();
             } else if (elem.webkitRequestFullscreen) { // Chrome, Safari, Opera
-                elem.webkitRequestFullscreen(1);
+                elem.webkitRequestFullscreen();
             } else if (elem.msRequestFullscreen) { // IE/Edge
-                elem.msRequestFullscreen(1);
-            }*/
+                elem.msRequestFullscreen();
+            }
             unityInstance.SetFullscreen(1);
-
-            screen.orientation.lock('landscape').catch(function (error) {
-                console.log("Error locking the orientation: ", error);
-            });
+            if (screen.orientation && screen.orientation.lock) {
+                screen.orientation.lock('landscape').catch(function (error) {
+                    console.log("Error locking the orientation: ", error);
+                });
+            }
         }
 
         function exitFullscreen() {
-        /*    if (document.exitFullscreen) {
+            if (document.exitFullscreen) {
                 document.exitFullscreen();
             } else if (document.mozCancelFullScreen) { // Firefox
                 document.mozCancelFullScreen();
@@ -64,11 +67,14 @@
                 document.webkitExitFullscreen();
             } else if (document.msExitFullscreen) { // IE/Edge
                 document.msExitFullscreen();
-            }*/
+            }
             unityInstance.SetFullscreen(0);
-            screen.orientation.unlock().catch(function (error) {
-                console.log("Error unlocking the orientation: ", error);
-            });
+
+            if (screen.orientation && screen.orientation.unlock) {
+                screen.orientation.unlock().catch(function (error) {
+                    console.log("Error unlocking the orientation: ", error);
+                });
+            }
         }
 
         function toggleFullscreen() {
@@ -138,7 +144,11 @@
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
                     unityInstance.SetFullscreen(1);
-                    toggleFullscreen();
+                    requestFullscreen();
+                };
+                exitFullscreenButton.onclick = () => {
+                    unityInstance.SetFullscreen(0);
+                    exitFullscreen();
                 };
                 var encryptedData = getURLParameter('data');
                 unityInstance.SendMessage('Data', 'ReceiveEncryptedData', encryptedData);
