--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="unity-warning"> </div>
         <div id="unity-footer">
             <div id="unity-webgl-logo"></div>
-            <div id="unity-fullscreen-button">Enter Fullscreen</div>
-            <div id="unity-exit-fullscreen-button">Exit Fullscreen</div>
+            <button id="unity-fullscreen-button">Enter Fullscreen</button>
+            <button id="unity-exit-fullscreen-button">Exit Fullscreen</button>
             <div id="unity-build-title">Drip Shoot Shot</div>
         </div>
     </div>
@@ -50,7 +50,6 @@
             } else if (elem.msRequestFullscreen) { // IE/Edge
                 elem.msRequestFullscreen();
             }
-            unityInstance.SetFullscreen(1);
             if (screen.orientation && screen.orientation.lock) {
                 screen.orientation.lock('landscape').catch(function (error) {
                     console.log("Error locking the orientation: ", error);
@@ -68,8 +67,6 @@
             } else if (document.msExitFullscreen) { // IE/Edge
                 document.msExitFullscreen();
             }
-            unityInstance.SetFullscreen(0);
-
             if (screen.orientation && screen.orientation.unlock) {
                 screen.orientation.unlock().catch(function (error) {
                     console.log("Error unlocking the orientation: ", error);
