--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="unity-warning"> </div>
         <div id="unity-footer">
             <div id="unity-webgl-logo"></div>
-            <button id="unity-fullscreen-button">Enter Fullscreen</button>
+            <div id="unity-fullscreen-button"></div>
             <div id="unity-build-title">Drip Shoot Shot</div>
         </div>
     </div>
