--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Drip Shoot Shot</title>
-    <script src="IsIOS.js"></script>
+    <script type="text/javascript">
+        function isIOS() {
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            return /iPad|iPhone|iPod/.test(userAgent) && !window.MSStream;
+        }
+
+        // Set a global variable to indicate if the user is on iOS
+        window.isIOSDevice = isIOS();
+    </script>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
@@ -45,7 +53,8 @@
                     console.log("Error locking the orientation: ", error);
                 });
             }
-            unityInstance.SendMessage('Screen', 'FullScreen', true); // Notify Unity of exiting fullscreen
+            if (window.isIOSDevice)
+            unityInstance.SendMessage('Screen', 'FullScreen', "1"); // Notify Unity of exiting fullscreen
         }
 
         function exitFullscreen() {
@@ -61,7 +70,8 @@
             } else {
                 console.log("Screen orientation unlocking is not supported or not necessary.");
             }
-            unityInstance.SendMessage('Screen', 'FullScreen', false); // Notify Unity of exiting fullscreen
+            if (window.isIOSDevice)
+            unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
  }
 
         function toggleFullscreen() {
