--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="unity-container" class="unity-desktop">
-        <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+        <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
@@ -47,25 +47,47 @@
         }
 
         function requestFullscreen() {
-            var element = document.documentElement;
-            var requestMethod = element.requestFullscreen || element.mozRequestFullScreen || element.webkitRequestFullscreen || element.msRequestFullscreen;
-            if (requestMethod) {
-                requestMethod.call(element).then(() => {
-                    lockOrientation();
-                }).catch((err) => {
-                    console.error(err);
-                });
+            if (window.isIOSDevice) {
+                // Handle fullscreen for iOS manually
+                canvas.style.position = "fixed";
+                canvas.style.top = 0;
+                canvas.style.left = 0;
+                canvas.style.width = "100%";
+                canvas.style.height = "100%";
+                canvas.style.zIndex = 9999;
+                lockOrientation();
+            } else {
+                var element = document.documentElement;
+                var requestMethod = element.requestFullscreen || element.mozRequestFullScreen || element.webkitRequestFullscreen || element.msRequestFullscreen;
+                if (requestMethod) {
+                    requestMethod.call(element).then(() => {
+                        lockOrientation();
+                    }).catch((err) => {
+                        console.error(err);
+                    });
+                }
             }
         }
 
         function exitFullscreen() {
-            var exitMethod = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
-            if (exitMethod) {
-                exitMethod.call(document).then(() => {
-                    unlockOrientation();
-                }).catch((err) => {
-                    console.error(err);
-                });
+            if (window.isIOSDevice) {
+                // Handle exit fullscreen for iOS manually
+                canvas.style.position = "";
+                canvas.style.top = "";
+                canvas.style.left = "";
+                canvas.style.width = "960px";
+                canvas.style.height = "600px";
+                canvas.style.zIndex = "";
+                unlockOrientation();
+            } else {
+                var exitMethod = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
+                if (exitMethod) {
+                    exitMethod.call(document).then(() => {
+                        unlockOrientation();
+                    }).catch((err) => {
+                        console.error(err);
+                    });
+                }
             }
         }
 
