--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="unity-container" class="unity-desktop">
-        <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
+        <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
@@ -47,63 +47,19 @@
         }
 
         function requestFullscreen() {
-            if (window.isIOSDevice) {
-                // Handle fullscreen for iOS manually
-                canvas.style.position = "fixed";
-                canvas.style.top = "0";
-                canvas.style.left = "0";
-                canvas.style.width = "100vw";
-                canvas.style.height = "100vh";
-                canvas.style.zIndex = 9999;
-                document.body.style.overflow = 'hidden';
-                lockOrientation();
-            } else {
-                var element = document.documentElement;
-                var requestMethod = element.requestFullscreen || element.mozRequestFullScreen || element.webkitRequestFullscreen || element.msRequestFullscreen;
-                if (requestMethod) {
-                    requestMethod.call(element).then(() => {
-                        lockOrientation();
-                    }).catch((err) => {
-                        console.error(err);
-                    });
-                }
-            }
-            unityInstance.SendMessage('Screen', 'FullScreen', "1"); // Notify Unity of exiting fullscreen
-        }
-
-        function exitFullscreen() {
-            if (window.isIOSDevice) {
-                // Handle exit fullscreen for iOS manually
-                canvas.style.position = "";
-                canvas.style.top = "";
-                canvas.style.left = "";
-                canvas.style.width = "960px";
-                canvas.style.height = "600px";
-                canvas.style.zIndex = "";
-                document.body.style.overflow = '';
-                unlockOrientation();
-            } else {
-                var exitMethod = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
-                if (exitMethod) {
-                    exitMethod.call(document).then(() => {
-                        unlockOrientation();
-                    }).catch((err) => {
-                        console.error(err);
-                    });
-                }
-            }
-            unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
-        }
-
-        function lockOrientation() {
+            unityInstance.SetFullscreen(1);
             if (screen.orientation && screen.orientation.lock) {
                 screen.orientation.lock('landscape').catch(function (error) {
                     console.log("Error locking the orientation: ", error);
                 });
             }
+            if (window.isIOSDevice)
+            unityInstance.SendMessage('Screen', 'FullScreen', "1"); // Notify Unity of exiting fullscreen
         }
 
-        function unlockOrientation() {
+        function exitFullscreen() {
+            unityInstance.SetFullscreen(0);
+
             if (screen.orientation && typeof screen.orientation.unlock === 'function') {
                 let unlockPromise = screen.orientation.unlock();
                 if (unlockPromise && typeof unlockPromise.catch === 'function') {
@@ -114,10 +70,13 @@
             } else {
                 console.log("Screen orientation unlocking is not supported or not necessary.");
             }
-        }
+            if (window.isIOSDevice)
+            unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
+ }
 
         function toggleFullscreen() {
-            if (!document.fullscreenElement && !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement) {
+            if (!document.fullscreenElement &&    // alternative standard method
+                !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement) {  // current working methods
                 requestFullscreen();
             } else {
                 exitFullscreen();
@@ -156,28 +115,14 @@
         };
 
         if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-            // Mobile device style: fill the whole browser client area with the game canvas:
-
             var meta = document.createElement('meta');
             meta.name = 'viewport';
             meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
             document.getElementsByTagName('head')[0].appendChild(meta);
             container.className = "unity-mobile";
-            // Avoid draining fillrate performance on mobile devices,
-            // and default/override low DPI mode on mobile browsers.
-            // config.devicePixelRatio = 1;
-
-            // To lower canvas resolution on mobile devices to gain some
-            // performance, uncomment the following line:
-            // config.devicePixelRatio = 1;
 
             canvas.style.width = window.innerWidth + 'px';
             canvas.style.height = window.innerHeight + 'px';
-
-            mobileWarning.style.display = "block";
-            setTimeout(() => {
-                mobileWarning.style.display = "none";
-            }, 5000);
 
         } else {
             canvas.style.width = "960px";
@@ -195,12 +140,12 @@
                 unityInstance = instance; // Assign the instance to the global variable
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
-                    toggleFullscreen();
+                    requestFullscreen();
                 };
                 var encryptedData = getURLParameter('data');
                 unityInstance.SendMessage('Data', 'ReceiveEncryptedData', encryptedData);
-             //   if (window.isIOSDevice)
-                    unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
+                if (window.isIOSDevice)
+                unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
             }).catch((message) => {
                 alert(message);
             });
