--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 
         // Set a global variable to indicate if the user is on iOS
         window.isIOSDevice = isIOS();
+
+        // Adjust the canvas size
+        function resizeCanvas() {
+            var canvas = document.querySelector("#unity-canvas");
+            canvas.style.width = window.innerWidth + 'px';
+            canvas.style.height = window.innerHeight + 'px';
+        }
+
+        // Add event listener for resizing
+        window.addEventListener('resize', resizeCanvas);
     </script>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
-<body>
+<body onload="resizeCanvas()">
     <div id="unity-container" class="unity-desktop">
-        <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+        <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
@@ -54,12 +64,11 @@
                 });
             }
             if (window.isIOSDevice)
-            unityInstance.SendMessage('Screen', 'FullScreen', "1"); // Notify Unity of exiting fullscreen
+                unityInstance.SendMessage('Screen', 'FullScreen', "1"); // Notify Unity of entering fullscreen
         }
 
         function exitFullscreen() {
             unityInstance.SetFullscreen(0);
-
             if (screen.orientation && typeof screen.orientation.unlock === 'function') {
                 let unlockPromise = screen.orientation.unlock();
                 if (unlockPromise && typeof unlockPromise.catch === 'function') {
@@ -71,8 +80,8 @@
                 console.log("Screen orientation unlocking is not supported or not necessary.");
             }
             if (window.isIOSDevice)
-            unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
- }
+                unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
+        }
 
         function toggleFullscreen() {
             if (!document.fullscreenElement &&    // alternative standard method
@@ -120,10 +129,7 @@
             meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
             document.getElementsByTagName('head')[0].appendChild(meta);
             container.className = "unity-mobile";
-
-            canvas.style.width = window.innerWidth + 'px';
-            canvas.style.height = window.innerHeight + 'px';
-
+            resizeCanvas();
         } else {
             canvas.style.width = "960px";
             canvas.style.height = "600px";
@@ -145,7 +151,7 @@
                 var encryptedData = getURLParameter('data');
                 unityInstance.SendMessage('Data', 'ReceiveEncryptedData', encryptedData);
                 if (window.isIOSDevice)
-                unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
+                    unityInstance.SendMessage('Screen', 'FullScreen', "0"); // Notify Unity of exiting fullscreen
             }).catch((message) => {
                 alert(message);
             });
