--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
         };
 
         document.body.appendChild(script);
+
+        // Add event listener for resize event
+        window.addEventListener('resize', resizeCanvas);
     </script>
 </body>
 </html>
