--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="unity-footer">
             <div id="unity-webgl-logo"></div>
             <div id="unity-fullscreen-button"></div>
-            <div id="unity-build-title">Drip Shoot Shot</div>
+            <div id="unity-build-title">Drip Combat</div>
         </div>
     </div>
     <script>
